[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "BabyBus"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "songwupei", email = "songwupei@163.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/songwupei/BabyBus"
Documentation = "https://songwupei.github.io/BabyBus/"

[project.entry-points.nbdev]
BabyBus = "BabyBus._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "BabyBus.__version__"}

[tool.setuptools.packages.find]
include = ["BabyBus"]

[tool.nbdev]
